--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@splidejs/react-splide": "^0.7.12",
     "next": "13.5.6",
+    "pure-react-carousel": "^1.30.1",
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.4",
@@ -18,6 +19,7 @@
     "react-scroll-parallax": "^3.4.5",
     "react-slick": "^0.30.1",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.0.6",
     "tailwindcss-animated": "^1.0.1"
   },
   "devDependencies": {
