--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "@splidejs/react-splide": "^0.7.12",
     "next": "13.5.6",
+    "next-auth": "^4.24.6",
     "pure-react-carousel": "^1.30.1",
     "react": "^18",
     "react-dom": "^18",
@@ -27,10 +29,11 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
+    "daisyui": "^4.7.2",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
     "postcss": "^8",
-    "tailwindcss": "^3",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
