--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "@prisma/client": "^5.10.2",
     "@splidejs/react-splide": "^0.7.12",
     "next": "13.5.6",
     "next-auth": "^4.24.6",
@@ -33,6 +34,7 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
     "postcss": "^8",
+    "prisma": "^5.10.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
