--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@headlessui/react": "^1.7.18",
     "@prisma/client": "^5.10.2",
     "@splidejs/react-splide": "^0.7.12",
+    "bcrypt": "^5.1.1",
     "next": "13.5.6",
     "next-auth": "^4.24.6",
+    "nodemailer": "^6.9.11",
     "pure-react-carousel": "^1.30.1",
     "react": "^18",
     "react-dom": "^18",
@@ -21,11 +23,13 @@
     "react-icons": "^5.0.1",
     "react-scroll-parallax": "^3.4.5",
     "react-slick": "^0.30.1",
+    "react-toastify": "^10.0.4",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.6",
     "tailwindcss-animated": "^1.0.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
