--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.18",
     "@prisma/client": "^5.10.2",
     "@splidejs/react-splide": "^0.7.12",
+    "apexcharts": "^3.45.2",
     "bcrypt": "^5.1.1",
     "flatpickr": "^4.6.13",
     "jsvectormap": "^1.5.3",
@@ -20,6 +21,7 @@
     "nodemailer": "^6.9.11",
     "pure-react-carousel": "^1.30.1",
     "react": "^18",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.4",
     "react-icons": "^5.0.1",
